# cfn-permission-checker

./: README.md
app/: .pre-commit-config.yaml  app  mypy.ini  pyproject.toml
app/src/app/: aws.py  cache.py  cli.py  collector.py  filter.py  paths.py
sam/: Makefile  requirements.txt  template.yaml
