[project]
name = "cfn-permission-checker"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "ajisaka.seiya", email = "ajisaka.seiya@synergy101.jp" }
]
dependencies = [
    "boto3>=1.34.113",
    "percache>=0.4.4",
    "dateparser>=1.2.0",
    "app-paths>=0.0.8",
    "scalpl>=0.4.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pre-commit>=3.7.1",
    "mypy>=1.10.0",
    "isort>=5.13.2",
    "black>=24.4.2",
    "autoflake>=2.3.1",
    "python-lsp-server[all]>=1.11.0",
    "types-dateparser>=1.2.0.20240420",
    "types-python-dateutil>=2.9.0.20240316",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[project.scripts]
cfn-permission-checker = "app.cli:main"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.autoflake]
remove-unused-variables = true
remove-all-unused-imports = true
in-place = true
recursive = true

